tests/reference/llvm-bindc_01-c984f09.stderr
semantic error: Function 'empty_c_void_p' is not declared and not intrinsic
 --> tests/../integration_tests/bindc_01.py:3:17
  |
3 | queries: CPtr = empty_c_void_p()
  |                 ^^^^^^^^^^^^^^^^ 
